src/objects/PDE_Case_Entry__c.object
<CustomObject>
    <fields>
        <fullName>PDE_Accepted_On_Date__c</fullName>
        <label>Accepted On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDE_Amendment_Number__c</fullName>
        <label>Amendment Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Attachments_To_Load_Counter__c</fullName>
        <label>Attachments To Load Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDE_Budget_Activity__c</fullName>
        <label>Budget Activity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>51</fullName>
                </value>
                <value>
                    <fullName>54</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>61</fullName>
                </value>
                <value>
                    <fullName>62</fullName>
                </value>
                <value>
                    <fullName>63</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDE_Case_ID_Created__c</fullName>
        <externalId>true</externalId>
        <label>Case ID Created</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Case_Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that submitted the case.</description>
        <inlineHelpText>The user that submitted the case</inlineHelpText>
        <label>Case Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PDE_Custom_Case_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDE_Case_Number_Created__c</fullName>
        <label>Case Number Created</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>PDE Case Entries</relationshipLabel>
        <relationshipName>PDE_Case_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDE_Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PDE_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PDE Case Entries</relationshipLabel>
        <relationshipName>PDE_Case_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PDE_ContractNumber__c</fullName>
        <description>Field for the PDE application.</description>
        <inlineHelpText>Please enter the contract number for the related request.</inlineHelpText>
        <label>Contract Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Copied_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copied to Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDE_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDE_Division__c</fullName>
        <label>Division</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Dollar_Amount__c</fullName>
        <label>Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PDE_EASI_Contract_Number__c</fullName>
        <description>PDE EASI Contract Number</description>
        <inlineHelpText>Please enter the EASI Contract number if applicable.</inlineHelpText>
        <label>EASi Contract Number (if different)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PDE_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PDE_Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>IT Service Desk</fullName>
                </value>
                <value>
                    <fullName>Request Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDE_PDN__c</fullName>
        <label>PDN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_POP_End_Date__c</fullName>
        <description>PDE Period of Performance End Date</description>
        <inlineHelpText>What is the period of performance end date?</inlineHelpText>
        <label>Period of Performance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDE_POP_Start_Date__c</fullName>
        <description>PDE Period of Performance Start Date</description>
        <inlineHelpText>What is the period of performance start date?</inlineHelpText>
        <label>Period of Performance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDE_Pegasys_Document_Type__c</fullName>
        <label>Pegasys Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D7</fullName>
                </value>
                <value>
                    <fullName>IX</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PX</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDE_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDE_Received_On_Date__c</fullName>
        <label>Received On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDE_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDE_Source_Document__c</fullName>
        <label>Source Document</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--Select Document Type--</fullName>
                </value>
                <value>
                    <fullName>Order/Award</fullName>
                </value>
                <value>
                    <fullName>Amendment/Mod</fullName>
                </value>
                <value>
                    <fullName>Receiving Report – Construction, Recurring, or Goods and Services (attachments required)</fullName>
                </value>
                <value>
                    <fullName>Receiving Report – Goods and Services (no attachments)</fullName>
                </value>
                <value>
                    <fullName>Direct Pay (D7)</fullName>
                </value>
                <value>
                    <fullName>Pegagsys Document Number (PDN) Request (Budget Only)</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>JasonItem</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Receiving Report</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDE_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Pending Assignment</fullName>
                </value>
                <value>
                    <fullName>Pending Budget Approval</fullName>
                </value>
                <value>
                    <fullName>Issues</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed (Closed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDE_Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Team_Members__c</fullName>
        <label>PDE_Team_Members_PSV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDE_Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDE_Transferred_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transferred to Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDE_Vendor__c</fullName>
        <label>Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PDE_Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>Zone 3</fullName>
                </value>
                <value>
                    <fullName>Zone 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PDE Case Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>PDE_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Attachment_To_Load_Counter_0_and_Team</fullName>
        <columns>NAME</columns>
        <columns>PDE_Attachments_To_Load_Counter__c</columns>
        <columns>PDE_Team_Members__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PDE_Attachments_To_Load_Counter__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PDE_Case_Number_Created__c</field>
            <operation>equals</operation>
        </filters>
        <label>Attachment To Load Counter &gt; 0 and Team</label>
    </listViews>
    <nameField>
        <displayFormat>PDE-{000000}</displayFormat>
        <label>PDE Case Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDE Case Entries</pluralLabel>
    <recordTypes>
        <fullName>Pegasys_Data_Entry</fullName>
        <active>true</active>
        <label>Pegasys Data Entry</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>